RESOLVED FIXED89323
[REGRESSION r120357] Web Inspector: no right-click context menu item 'inspect element'
https://bugs.webkit.org/show_bug.cgi?id=89323
Summary [REGRESSION r120357] Web Inspector: no right-click context menu item 'inspec...
Philippe Wittenbergh
Reported 2012-06-17 20:33:04 PDT
Since r120398, I can no longer inspect an element by right-clicking on it. The context menu item is missing. Worked fine with r120350. Happens both on 10.6 and 10.7. (I disabled all extensions just in case, but that didn't help anything)
Attachments
screenshot with WebKit nightly (37.39 KB, image/png)
2012-06-18 02:35 PDT, Philippe Wittenbergh
no flags
screenshot with Safari 5.1.7 (38.59 KB, image/png)
2012-06-18 02:37 PDT, Philippe Wittenbergh
no flags
Proposed Change (4.00 KB, patch)
2012-07-01 14:19 PDT, Timothy Hatcher
no flags
Proposed Change for WebKit2 (2.19 KB, patch)
2012-07-10 12:36 PDT, Timothy Hatcher
no flags
Proposed Change for WebKit2 (Round 2) (4.76 KB, patch)
2012-07-12 14:43 PDT, Timothy Hatcher
no flags
Alexander Pavlov (apavlov)
Comment 1 2012-06-18 02:20:04 PDT
I tend to close this as WONTFIX, since I cannot reproduce the issue with WebKit ToT (r120576) on Chromium. I also cannot see any change that may seem offending in the range you've provided. Which browser/bare WebKit are you using, on what OS, and does it reproduce for you on any web page?
Philippe Wittenbergh
Comment 2 2012-06-18 02:33:25 PDT
(In reply to comment #1) > Which browser/bare WebKit are you using, on what OS, and does it reproduce for you on any web page? Webkit nightly builds (WebKit-SVN-r12xxx.dmg, downloaded from http://nightly.webkit.org/) on OS X 10.6 and 10.7 (all up to date) as noted in my report. It happens on any and all pages. Safari 5.1.7 works as expected. I run my OS in French, but that shouldn't matter, I think.
Philippe Wittenbergh
Comment 3 2012-06-18 02:35:13 PDT
Created attachment 148074 [details] screenshot with WebKit nightly Taken with WebKit-SVN-r120575.
Philippe Wittenbergh
Comment 4 2012-06-18 02:37:08 PDT
Created attachment 148076 [details] screenshot with Safari 5.1.7 (expected behaviour)
Alexander Pavlov (apavlov)
Comment 5 2012-06-18 03:06:20 PDT
Timothy, can you triage/handle the issue appropriately? This seems to be broken only in the bare WebKit nightly, and I cannot see any offending change in the range reported.
Kevin M. Dean
Comment 6 2012-06-18 08:19:38 PDT
Just confirming that I'm seeing the same issue with the nightlies.
Dave
Comment 7 2012-06-20 06:51:05 PDT
I can confirm as I'm seeing the same issue with WebKit nightly builds. Safari info -- Version 5.1.7 (7534.57.2, r120807) Mac OS X -- 10.7.4
Brad
Comment 8 2012-06-21 11:05:55 PDT
I've been having this same probem for the last several nightlies, and I am currently on r120914. I miss using the menu a lot. Fortunately, the magnifying glass still works. I tried turning off extensions, but it didn't help. I am also using Glims, which I have not yet tried disabling.
Timothy Hatcher
Comment 9 2012-06-22 07:32:00 PDT
I'm looking into it.
Timothy Hatcher
Comment 10 2012-06-22 07:32:39 PDT
Brad
Comment 11 2012-06-28 10:48:14 PDT
I just noticed in r121418 that the "Inspect Element" menu item does appear (and works) when I click on a text form field such as an input[type='text'] or a textarea. But still not on other things (such as the input[type='submit'] on this page). I don't know if this was the case or not in earlier nightlies.
tsbehlman
Comment 12 2012-06-28 19:15:38 PDT
(In reply to comment #11) > I just noticed in r121418 that the "Inspect Element" menu item does appear (and works) when I click on a text form field such as an input[type='text'] or a textarea. But still not on other things (such as the input[type='submit'] on this page). I don't know if this was the case or not in earlier nightlies. I can confirm the exact same behavior in r121382.
Dave
Comment 13 2012-06-29 14:05:26 PDT
I can confirm that the issue first appeared in build r120398. The "Inspect Element" feature was functioning correctly in build r120350.
Timothy Hatcher
Comment 14 2012-07-01 13:48:56 PDT
I'm pretty sure this broke with http://trac.webkit.org/changeset/120357. That change added a new context menu item tag, before the Inspect Element tag. This changed the enum values and thus broke any client built with an older WebKit version.
Timothy Hatcher
Comment 15 2012-07-01 14:19:26 PDT
Created attachment 150337 [details] Proposed Change
Sam Weinig
Comment 16 2012-07-01 14:33:53 PDT
Comment on attachment 150337 [details] Proposed Change View in context: https://bugs.webkit.org/attachment.cgi?id=150337&action=review > Source/WebCore/ChangeLog:12 > + Fix the order of the ContextMenuAction enum to be binary compatible with > + older versions of WebKit. It seems bad that we could have a binary compatibility issue like this in WebCore. Can we change it so that the WebKit API is mapped via a switch statement to the WebCore enum so this can't happen in the future? > Source/WebKit/mac/ChangeLog:11 > + * WebView/WebUIDelegatePrivate.h: > + Add missing enums that were added in ContextMenuItem.h but left out here. Is there anyway we can guard against this in the future? Perhaps a switch statement without a default case somewhere?
Timothy Hatcher
Comment 17 2012-07-01 16:07:29 PDT
(In reply to comment #16) > (From update of attachment 150337 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=150337&action=review > > > Source/WebCore/ChangeLog:12 > > + Fix the order of the ContextMenuAction enum to be binary compatible with > > + older versions of WebKit. > > It seems bad that we could have a binary compatibility issue like this in WebCore. Can we change it so that the WebKit API is mapped via a switch statement to the WebCore enum so this can't happen in the future? > > > Source/WebKit/mac/ChangeLog:11 > > + * WebView/WebUIDelegatePrivate.h: > > + Add missing enums that were added in ContextMenuItem.h but left out here. > > Is there anyway we can guard against this in the future? Perhaps a switch statement without a default case somewhere? That would be the best approach. But we don't really add items often at all.
WebKit Review Bot
Comment 18 2012-07-01 17:27:39 PDT
Comment on attachment 150337 [details] Proposed Change Clearing flags on attachment: 150337 Committed r121646: <http://trac.webkit.org/changeset/121646>
WebKit Review Bot
Comment 19 2012-07-01 17:27:45 PDT
All reviewed patches have been landed. Closing bug.
Kevin M. Dean
Comment 20 2012-07-01 23:34:01 PDT
I'm seeing no difference with r121656. Inspect element is still not appearing on anything but form fields.
Kevin M. Dean
Comment 21 2012-07-02 00:04:38 PDT
Webkit doesn't seem to want to Quit in the builds where Inspect Element is missing as well. I select Quit and the window closes but the app doesn't quit and Quit in the menu grays out. Back to the last working version for me.
Kevin M. Dean
Comment 22 2012-07-02 00:11:28 PDT
Seems the Quit issue is covered with Bug 90093
Kevin M. Dean
Comment 23 2012-07-02 08:40:54 PDT
Tried again with r121678, and not fixed there either. Needs to be re-opened.
Brad
Comment 24 2012-07-02 17:19:50 PDT
I've had the quitting problem too, but didn't think about it being related. ALSO: another place where the menu is OK, is when there is contenteditable="true" on the item or one of its ancestors.
Kevin M. Dean
Comment 25 2012-07-02 18:40:57 PDT
Per the other bug, the quitting issue has been fixed and started after this bug, so not related.
Joseph Pecoraro
Comment 26 2012-07-03 15:23:23 PDT
*** Bug 90499 has been marked as a duplicate of this bug. ***
Kevin M. Dean
Comment 27 2012-07-03 15:35:13 PDT
(In reply to comment #26) > *** Bug 90499 has been marked as a duplicate of this bug. *** I noticed in the other bug you mentioned "The issue should be fixed in WebKit after r121678." It's not fixed as I previously reported and should be re-opened unless others are seeing it as fixed.
Joseph Pecoraro
Comment 28 2012-07-03 15:44:19 PDT
> I'm seeing no difference with r121656. Inspect element is still not appearing on anything but form fields. Tim, it sounds like people are still seeing this. Any ideas?
lars.sonchocky-helldorf
Comment 29 2012-07-06 13:51:46 PDT
The bug is still present in WebKit Version 5.1.7 (6534.57.2, r121952)
Kevin M. Dean
Comment 30 2012-07-06 14:02:59 PDT
Someone must have taken this whole week off.
Timothy Hatcher
Comment 31 2012-07-09 07:15:07 PDT
In fact, I did. I'm now back from vacation and will look into this again.
Timothy Hatcher
Comment 32 2012-07-10 12:36:51 PDT
Created attachment 151502 [details] Proposed Change for WebKit2 This needed fixed in WebKit2 also. The previous fix only fixed WebKit1 clients. I've tested this against Safari 5.1.7.
Timothy Hatcher
Comment 33 2012-07-10 12:42:04 PDT
Comment on attachment 151502 [details] Proposed Change for WebKit2 This is going to need a more complex fix. Moving the enum will fix it for Safari 5.1.7 but it will disappear for Safari 6.
Timothy Hatcher
Comment 34 2012-07-12 14:43:51 PDT
Created attachment 152068 [details] Proposed Change for WebKit2 (Round 2)
WebKit Review Bot
Comment 35 2012-07-12 15:58:26 PDT
Comment on attachment 152068 [details] Proposed Change for WebKit2 (Round 2) Clearing flags on attachment: 152068 Committed r122520: <http://trac.webkit.org/changeset/122520>
WebKit Review Bot
Comment 36 2012-07-12 15:58:39 PDT
All reviewed patches have been landed. Closing bug.
Philippe Wittenbergh
Comment 37 2012-07-13 05:47:17 PDT
Thanks, the context menu works nicely now :). @ r122535
Note You need to log in before you can comment on or make changes to this bug.