Make the "Inspect Element" context menu item appear in nightly builds again.

rdar://problem/11702613
https://webkit.org/b/89323

Reviewed by Dan Bernstein.

Source/WebCore:

* platform/ContextMenuItem.h:
Fix the order of the ContextMenuAction enum to be binary compatible with
older versions of WebKit.

Source/WebKit/mac:

* WebView/WebUIDelegatePrivate.h:
Add missing enums that were added in ContextMenuItem.h but left out here.


Canonical link: https://commits.webkit.org/108208@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121646 268f45cc-cd09-0410-ab3c-d52691b4dbfc